--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@fontsource/work-sans": "^4.5.14",
     "@mui/material": "^5.11.4",
     "@next/font": "13.1.2",
     "eslint": "8.32.0",
