--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@fontsource/work-sans": "^4.5.14",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.4",
     "@next/font": "13.1.2",
     "eslint": "8.32.0",
