add font optimization

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fontsource/work-sans": "^4.5.14",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.4",
-    "@next/font": "13.1.2",
+    "@next/font": "^13.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
